prevent page overflow

--- a/src/stylesheets/Converter.scss
+++ b/src/stylesheets/Converter.scss
@@ -12,10 +12,21 @@
   align-items: center;
   justify-content: center;
   font-size: 5vmin;
-  padding-top: 1vh;
 
   .radix-number:focus {
     outline: 0;
     text-shadow: 0px 2px 2px;
+  }
+
+  .radix-number {
+    max-width: 90vw;
+    white-space: nowrap;
+    overflow: auto;
+    padding: 10px 0 10px;
+  }
+  .radix {
+    display: table-cell;
+    font-size: 50%;
+    @include for-all-vendor(transform, translate(0, 1ch));
   }
 }
